--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">Evolt</string>
-    <string name="title_activity_main">Evolt</string>
-    <string name="package_name">com.evolt</string>
-    <string name="custom_url_scheme">com.evolt</string>
+    <string name="app_name">Falar</string>
+    <string name="title_activity_main">Falar</string>
+    <string name="package_name">com.falar</string>
+    <string name="custom_url_scheme">com.falar</string>
 </resources>
